[gd_scene load_steps=13 format=3 uid="uid://cqnafa0vkqqe0"]

[ext_resource type="Texture2D" uid="uid://i22x0uoiit80" path="res://assets/player/player.png" id="1_a4cnr"]
[ext_resource type="Script" path="res://characters/player.gd" id="1_uk2tt"]
[ext_resource type="PackedScene" uid="uid://77lo8gbwablu" path="res://tools/push_mower.tscn" id="3_r03tr"]
[ext_resource type="PackedScene" uid="uid://b6k2m33d7q1gf" path="res://tools/weed_wacker.tscn" id="4_bsd4i"]
[ext_resource type="PackedScene" uid="uid://caji8sohjjv33" path="res://tools/riding_mower.tscn" id="5_5bftx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2y4fi"]
size = Vector2(23, 57)

[sub_resource type="Animation" id="Animation_c55o4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_decr3"]
resource_name = "move_down"
length = 0.3
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0714286, 0.142857, 0.214286),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_dxrj0"]
resource_name = "move_left"
length = 0.3
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0714286, 0.142857, 0.214286),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_ubker"]
resource_name = "move_right"
length = 0.3
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0714286, 0.142857, 0.214286),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_sycpk"]
resource_name = "move_up"
length = 0.3
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0714286, 0.142857, 0.214286),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ooowl"]
_data = {
"RESET": SubResource("Animation_c55o4"),
"move_down": SubResource("Animation_decr3"),
"move_left": SubResource("Animation_dxrj0"),
"move_right": SubResource("Animation_ubker"),
"move_up": SubResource("Animation_sycpk")
}

[node name="Player" type="Area2D" groups=["player"]]
script = ExtResource("1_uk2tt")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-2, -16)
scale = Vector2(4, 4)
texture = ExtResource("1_a4cnr")
hframes = 4
vframes = 4
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -2.5)
shape = SubResource("RectangleShape2D_2y4fi")

[node name="RayCast2D" type="RayCast2D" parent="."]
modulate = Color(1, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ooowl")
}

[node name="Tools" type="Node2D" parent="."]

[node name="Push_Mower" parent="Tools" instance=ExtResource("3_r03tr")]
visible = false
position = Vector2(-35, 0)

[node name="Weed_Wacker" parent="Tools" instance=ExtResource("4_bsd4i")]
visible = false
position = Vector2(30, 0)

[node name="Riding_Mower" parent="Tools" instance=ExtResource("5_5bftx")]
visible = false
position = Vector2(0, 32)
rotation = 4.71239
